force-app/main/default/objects/Help_Message__c/Help_Message__c.object-meta.xml
<CustomObject>
    <description>This object is used for storing dynamically accessible help / guidance messages for display within the application</description>
    <label>Help Message</label>
    <nameField>
        <label>Help Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>