force-app/main/default/objects/Help_Message__c/fields/Custom_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Custom_Filter_Logic__c</fullName>
    <inlineHelpText>Use this field to apply custom filter logic based on SOQL principles</inlineHelpText>
    <label>Custom Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>