force-app/main/default/objects/Help_Message__c/fields/Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>Filter_Type__c</fullName>
    <inlineHelpText>Determine the filter type to be used with your filters</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Records_Valid_For__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>