force-app/main/default/objects/Help_Message__c/fields/Is_Draft__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft__c</fullName>
    <formula>ISPICKVAL(Status__c, &apos;Draft&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Draft</label>
    <type>Checkbox</type>
</CustomField>