force-app/main/default/objects/Help_Message__c/fields/Likes__c.field-meta.xml
<CustomField>
    <fullName>Likes__c</fullName>
    <inlineHelpText>This field will display the number of people who have liked or found this help message useful. It will only display data if your administrators has configured your application to support tracking of this information,</inlineHelpText>
    <label>Likes</label>
    <summaryForeignKey>Help_Message_Like__c.Help_Message__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>