force-app/main/default/objects/Help_Message__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>This is the body of the help / guidance message that will appear on the record</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>