force-app/main/default/objects/Help_Message__c/fields/Message_Title__c.field-meta.xml
<CustomField>
    <fullName>Message_Title__c</fullName>
    <inlineHelpText>This is the message that will as the header / title for the help message</inlineHelpText>
    <label>Message Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>