force-app/main/default/objects/Help_Message__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>This confirms what the order of display is for the help messages</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>