force-app/main/default/objects/Help_Message__c/fields/Record_SObjectType__c.field-meta.xml
<CustomField>
    <fullName>Record_SObjectType__c</fullName>
    <inlineHelpText>Please provide a value Object API Name in here, this determine what record the message should appear on.</inlineHelpText>
    <label>Record SObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>