force-app/main/default/objects/Help_Message__c/fields/Records_Valid_For__c.field-meta.xml
<CustomField>
    <fullName>Records_Valid_For__c</fullName>
    <inlineHelpText>This confirms if filters are being applied to this help message, if you select all then it will appear at all time on the record</inlineHelpText>
    <label>Records Valid For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>By Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>