force-app/main/default/objects/Help_Message__c/fields/Views__c.field-meta.xml
<CustomField>
    <fullName>Views__c</fullName>
    <inlineHelpText>This field will display the number of views that a Help Message has had, it will only populate data if analytics has been configured by your system administrator.</inlineHelpText>
    <label>Views</label>
    <summaryForeignKey>Help_Message_View__c.Help_Message__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>